--- a/views/layout.html
+++ b/views/layout.html
@@ -16,7 +16,7 @@
 		{% block body %}{% endblock %}
 		{% include "partials/footer.html" %}
 
-		<script src="/js/main.js"></script>
+		<script src="/js/app.js"></script>
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 		<script>
