--- a/views/work.html
+++ b/views/work.html
@@ -1,9 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container content">
 
-	<!-- @todo content goes here -->
+	<div class="content">
+		<div class="content-inner">
 
-</div> <!-- .container -->
+		</div> <!-- .content-inner -->
+	</div>  <!-- .content -->
+
 {% endblock %}
