--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
+@import "https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Overpass+Mono:400,700";
 /*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Change the default font family in all browsers (opinionated).
@@ -415,9 +416,7 @@ textarea {
 
 .container-fluid {
   padding-right: 20px;
-  padding-right: 20px;
   padding-right: 2rem;
-  padding-left: 20px;
   padding-left: 20px;
   padding-left: 2rem;
 }
@@ -438,9 +437,7 @@ textarea {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-right: -5px;
-  margin-right: -5px;
   margin-right: -0.5rem;
-  margin-left: -5px;
   margin-left: -5px;
   margin-left: -0.5rem;
 }
@@ -490,9 +487,7 @@ textarea {
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
   padding-right: 5px;
-  padding-right: 5px;
   padding-right: 0.5rem;
-  padding-left: 5px;
   padding-left: 5px;
   padding-left: 0.5rem;
 }
@@ -1362,15 +1357,6 @@ textarea {
     order: 1;
   }
 }
-.list-inline {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-.list-inline li {
-  display: inline-block;
-}
-
 html, body {
   width: 100%;
   height: 100%;
@@ -1382,15 +1368,261 @@ html {
 
 body {
   background-color: #000;
+  background-size: 50px 50px;
+  background-attachment: fixed;
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(2%, rgba(34, 34, 34, 0.75)), color-stop(2%, transparent)), -webkit-gradient(linear, left top, left bottom, color-stop(2%, rgba(34, 34, 34, 0.75)), color-stop(2%, transparent));
+  background-image: linear-gradient(90deg, rgba(34, 34, 34, 0.75) 2%, transparent 2%), linear-gradient(rgba(34, 34, 34, 0.75) 2%, transparent 2%);
   color: #888;
-  font: normal 16px/1.4 "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font: normal 16px/1.4 "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font: normal 1.6rem/1.4 "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: normal 16px/1.4 "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: normal 1.6rem/1.4 "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
 }
 
-@media (min-width: 800px) and (max-width: 991px) {
+@media (min-width: 800px) {
   body {
     line-height: 1.6;
   }
 }
+@-webkit-keyframes prettyColors {
+  0% {
+    color: #f54768;
+  }
+  15% {
+    color: #07eff3;
+  }
+  30% {
+    color: #eef46e;
+  }
+  45% {
+    color: #d70e2f;
+  }
+  60% {
+    color: #8bd76b;
+  }
+  75% {
+    color: #07eff3;
+  }
+  100% {
+    color: #f54768;
+  }
+}
+@keyframes prettyColors {
+  0% {
+    color: #f54768;
+  }
+  15% {
+    color: #07eff3;
+  }
+  30% {
+    color: #eef46e;
+  }
+  45% {
+    color: #d70e2f;
+  }
+  60% {
+    color: #8bd76b;
+  }
+  75% {
+    color: #07eff3;
+  }
+  100% {
+    color: #f54768;
+  }
+}
+.list-inline {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.list-inline li {
+  display: inline-block;
+}
+
+.sidebar {
+  position: relative;
+  height: 100vh;
+  background: rgba(34, 34, 34, 0.85);
+  padding: 2em;
+}
+
+.logo {
+  display: block;
+  text-decoration: none;
+  overflow: hidden;
+}
+.logo svg {
+  max-width: 100%;
+  height: auto;
+}
+
+footer {
+  font-size: 0.7em;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  border-top: 1px dotted #222;
+}
+footer p {
+  margin: 0;
+  padding: 0;
+}
+
+@media (min-width: 800px) {
+  .content, footer {
+    width: calc( 100% - $sidebar-width );
+    padding: 4em 8em;
+  }
+
+  .content-inner, .footer-inner {
+    margin-left: 10em;
+  }
+
+  .sidebar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 10em;
+  }
+}
+.nav--main {
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 0.1em;
+  font-size: 4em;
+  font-family: "Overpass Mono", monospace;
+}
+.nav--main ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.nav--main li {
+  display: block;
+}
+.nav--main li:nth-of-type(1) a {
+  color: #f54768;
+}
+.nav--main li:nth-of-type(2) a {
+  color: #8bd76b;
+}
+.nav--main li:nth-of-type(3) a {
+  color: #07eff3;
+}
+.nav--main li:nth-of-type(4) a {
+  color: #eef46e;
+}
+.nav--main a {
+  display: block;
+  text-decoration: none;
+}
+@media (min-width: 800px) {
+  .nav--main {
+    font-size: 1.3em;
+  }
+}
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: "Overpass Mono", monospace;
+  font-weight: 200;
+  line-height: 1.3;
+  padding: 0;
+  margin: 30px 0 18.75px 0;
+  margin: 3rem 0 1.875rem 0;
+}
+
+h4, h5,
+.h4, .h5 {
+  font-family: "Overpass Mono", monospace;
+  color: #fff;
+}
+
+h4, h5, h6,
+.h4, .h5, .h6 {
+  letter-spacing: 1.5px;
+  letter-spacing: 0.15rem;
+}
+
+h3:after, h4:after, h5:after,
+.h3:after, .h4:after, .h5:after {
+  content: "";
+  display: block;
+  width: 25px;
+  height: 5px;
+  background: #333;
+  margin: 3px 0 0 0;
+}
+
+h1, .h1 {
+  font-size: 80px;
+  font-size: 8rem;
+  color: #f54768;
+}
+
+h2, .h2 {
+  font-size: 46px;
+  font-size: 4.6rem;
+  color: #8bd76b;
+}
+
+h3, .h3 {
+  font-size: 36px;
+  font-size: 3.6rem;
+  color: #07eff3;
+}
+
+h4, .h4 {
+  font-size: 25px;
+  font-size: 2.5rem;
+  color: #eef46e;
+}
+
+h5, .h5 {
+  font-size: 20px;
+  font-size: 2rem;
+}
+
+h6, .h6 {
+  font-size: 18px;
+  font-size: 1.8rem;
+}
+
+.brush {
+  display: block;
+  font-family: "Road Rage", "Overpass Mono", monospace;
+  text-align: center;
+  -webkit-transform: rotate(-5deg);
+          transform: rotate(-5deg);
+  -webkit-animation: prettyColors 12s forwards ease-in-out infinite;
+          animation: prettyColors 12s forwards ease-in-out infinite;
+}
+
+.work {
+  display: none;
+}
+
+.social {
+  position: absolute;
+  bottom: 4em;
+  text-align: center;
+  border: 1px solid red;
+}
+.social ul {
+  display: block;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.social li {
+  display: inline-block;
+}
+.social span {
+  font-size: 0;
+  color: transparent;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
+
 /*# sourceMappingURL=main.css.map */
