--- a/src/scss/_patterns/_navigation.scss
+++ b/src/scss/_patterns/_navigation.scss
@@ -7,5 +7,35 @@
 }
 
 .nav--main {
+	text-transform: uppercase;
+	text-align: center;
+	letter-spacing: 0.1em;
+	font-size: 4em;
+	font-family: $overpass-mono;
 
+	ul {
+		@include list-reset;
+	}
+
+	li {
+		display: block;
+
+		&:nth-of-type(1) a {  color: $pink; }
+		&:nth-of-type(2) a {  color: $lime; }
+		&:nth-of-type(3) a {  color: $teal; }
+		&:nth-of-type(4) a {  color: $yellow; }
+	}
+
+	a {
+		display: block;
+		text-decoration: none;
+	}
+
+	@media #{$bp-medium} {
+		font-size: 1.3em;
+
+		a {
+
+		}
+	}
 }
