--- a/src/scss/_patterns/_typography.scss
+++ b/src/scss/_patterns/_typography.scss
@@ -2,6 +2,7 @@
 // Typography
 //
 
+// Links
 a {
 
 	&:hover, &:active {
@@ -15,4 +16,76 @@ a {
 	&:visited {
 
 	}
+}
+
+// Group styles
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+	font-family: $heading-text;
+	font-weight: 200;
+	line-height: 1.3;
+	padding: 0;
+	margin: 3rem 0 1.875rem 0;
+}
+
+h4, h5,
+.h4, .h5 {
+	font-family: $heading-text;
+	color: $light;
+}
+
+h4, h5, h6,
+.h4, .h5, .h6 {
+	letter-spacing: 0.15rem;
+}
+
+h3, h4, h5,
+.h3, .h4, .h5 {
+
+	&:after {
+		content: "";
+		display: block;
+		width: 25px;
+		height: 5px;
+		background: #333;
+		margin: 3px 0 0 0;
+	}
+}
+
+// Singular styles
+h1, .h1 {
+	font-size: 8rem; // 80px
+	color: $pink;
+}
+
+h2, .h2 {
+	font-size: 4.6rem; // 46px
+	color: $lime;
+}
+
+h3, .h3 {
+	font-size: 3.6rem; // 36px
+	color: $teal;
+}
+
+h4, .h4 {
+	font-size: 2.5rem; // 25px
+	color: $yellow;
+}
+
+h5, .h5 {
+	font-size: 2rem; // 20px
+}
+
+h6, .h6 {
+	font-size: 1.8rem; // 18px
+}
+
+// Special styles
+.brush {
+	display: block;
+	font-family: "Road Rage", $overpass-mono;
+	text-align: center;
+	transform: rotate(-5deg);
+	animation: prettyColors 12s forwards ease-in-out infinite;
 }
