--- a/views/layout.html
+++ b/views/layout.html
@@ -7,15 +7,20 @@
 		<meta name="HandheldFriendly" content="True">
 		<meta name="MobileOptimized" content="320">
 		<title>Daryn St. Pierre | Front-End Web Developer</title>
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" type="text/css">
+		<script src="https://use.fontawesome.com/a4bc0a3d5c.js"></script>
 		<link rel="stylesheet" href="/css/main.css">
 	</head>
 	<body>
 
-		{% include "partials/header.html" %}
-		{% block body %}{% endblock %}
-		{% include "partials/footer.html" %}
+		<main>
 
+			{% include "partials/sidebar.html" %}
+			{% block body %}{% endblock %}
+			{% include "partials/footer.html" %}
+
+		</main>
+
+		<script src="/js/vendor.js"></script>
 		<script src="/js/app.js"></script>
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
