--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -1,3 +1,5 @@
 <footer>
-	<p>&copy; 2017 Company, Inc. All Rights Reserved.</p>
+	<div class="footer-inner">
+		<p>&copy; 2017 Company, Inc. All Rights Reserved.</p>
+	</div>
 </footer>
