--- a/views/home.html
+++ b/views/home.html
@@ -29,6 +29,6 @@
 		</div> <!-- .content-inner -->
 	</div>  <!-- .content -->
 
-	{% include 'partials/work.html' %}
+	{# include 'partials/work.html' #}
 
 {% endblock %}
