--- a/src/scss/_patterns/_navigation.scss
+++ b/src/scss/_patterns/_navigation.scss
@@ -4,6 +4,25 @@
 
 .nav {
 
+	ul {
+		@include list-reset;
+	}
+}
+
+@mixin nther( $n: null, $color: null, $bg: null ) {
+	$darken: 30%;
+	&:nth-of-type(#{$n}) a {
+		color: $color;
+
+		&:after {
+			background: darken($bg, $darken);
+		}
+
+		&:before {
+			background: $bg;
+			box-shadow: 5px 5px 0 0 darken($bg, $darken);
+		}
+	}
 }
 
 .nav--main {
@@ -13,28 +32,68 @@
 	font-size: 4em;
 	font-family: $overpass-mono;
 
-	ul {
-		@include list-reset;
-	}
-
 	li {
 		display: block;
-
-		&:nth-of-type(1) a {  color: $pink; }
-		&:nth-of-type(2) a {  color: $lime; }
-		&:nth-of-type(3) a {  color: $teal; }
-		&:nth-of-type(4) a {  color: $yellow; }
 	}
 
 	a {
 		display: block;
 		text-decoration: none;
+		padding: 0.35em;
+		transition: all 0.2s ease-in-out;
 	}
 
 	@media #{$bp-medium} {
-		font-size: 1.3em;
+		font-size: 1.6em;
+
+		li {
+			margin: 0.5em 0;
+
+			@include nther( 1, $pink, $pink );
+			@include nther( 2, $lime, $lime );
+			@include nther( 3, $teal, $teal );
+			@include nther( 4, $yellow, $yellow );
+		}
 
 		a {
+			position: relative;
+			z-index: 1;
+
+			&:hover {
+				color: $mid !important;
+			}
+
+			&:after {
+				$w: 5px;
+				position: absolute;
+				left: calc(50% - #{$w});
+				display: block;
+				content: " ";
+				width: $w;
+				height: 2px;
+				transform-origin: center;
+			}
+
+			&:before {
+				position: absolute;
+				top: 0; left: 0;
+				z-index: -1;
+				display: block;
+				content: " ";
+				width: 100%;
+				height: 100%;
+				border-radius: 5px;
+				transition: all 0.2s ease-in-out;
+				transform: scaleX(0) skewX(-15deg);
+				transform-origin: center;
+			}
+
+			&:hover {
+
+				&:before {
+					transform: scaleX(1) skewX(-15deg);
+				}
+			}
 
 		}
 	}
