--- a/src/scss/_patterns/_structure.scss
+++ b/src/scss/_patterns/_structure.scss
@@ -18,12 +18,49 @@
 // Logo
 .logo {
 	display: block;
-	text-decoration: none;
-	overflow: hidden;
+	margin: 0;
+	padding: 0;
 
-	svg {
-		max-width: 100%;
-		height: auto;
+	a {
+		display: block;
+		text-decoration: none;
+		overflow: visible;
+	}
+}
+
+.logotype {
+	display: block;
+	max-width: 75%;
+	height: auto;
+	margin: 0 auto;
+	overflow: visible !important;
+
+	body.home & {
+		// on-the-fly timining and delay vars
+		$n: 0.35s; // delay
+		$m: 1.3; // modifier
+
+		#complete, .bracket {
+			transform-origin: 50%;
+			opacity: 0;
+		}
+
+		#complete {
+			transform: translateY(1em) rotate(-20deg) scale(2);
+			animation: skateDeck $n forwards ease 1;
+			animation-delay: $n * ( $m + 1 );
+		}
+
+		#bracket_right {
+			transform: translateX(0.5em) scale(0.85);
+			animation: bracketRight $n forwards ease 1;
+		}
+
+		#bracket_left {
+			transform: translateX(-0.5em) scale(0.85);
+			animation: bracketLeft $n forwards ease 1;
+			animation-delay: $n * $m;
+		}
 	}
 }
 
@@ -33,7 +70,6 @@ footer {
 	text-align: center;
 	text-transform: uppercase;
 	letter-spacing: 0.1em;
-	border-top: 1px dotted $mid;
 
 	p {
 		margin: 0;
