--- a/views/layout.html
+++ b/views/layout.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="HandheldFriendly" content="True">
 		<meta name="MobileOptimized" content="320">
-		<title>Daryn St. Pierre | Front-End Web Developer</title>
+		<title>{{title}} | Daryn St. Pierre | Front-End Web Developer</title>
 		<script src="https://use.fontawesome.com/a4bc0a3d5c.js"></script>
 		<link rel="stylesheet" href="/css/main.css">
 	</head>
-	<body>
+	<body class="no-js {{class}}">
 
 		<main>
 
