--- a/views/partials/sidebar.html
+++ b/views/partials/sidebar.html
@@ -1,29 +1,58 @@
 <div class="sidebar">
 
-	<a href="/" class="logo">
-		<svg class="logotype" viewBox="0 0 312 283" preserveAspectRatio="xMinYMin meet" xmlns="http://www.w3.org/2000/svg">
-			<style>
-			.path {
-				fill: none;
-				stroke: #F54768;
-				stroke-width: 14;
-				stroke-linecap: round;
-				stroke-linejoin: round;
-				stroke-miterlimit: 10;
-			}
-			.wheel {
-				fill: #F54768;
-			}
-			</style>
-			<g id="skateboard" transform="matrix(1, 0, 0, 1, -150, -160)">
-				<path id="bracket_right" class="path" d="M370.7 371.4l72-72-72-72"/>
-				<path id="bracket_left" class="path" d="M238.7 227.4l-72 72 72 72"/>
-				<path id="deck" class="path" d="M338.8 175.7l-.6 45.1-70.7 170-31.6 32.2"/>
-				<ellipse id="wheel_1" class="wheel" transform="rotate(-67.418 349.297 254.612)" cx="349.3" cy="254.6" rx="10.2" ry="10.2"/>
-				<ellipse id="wheel_2" class="wheel" transform="rotate(-67.418 296.09 382.571)" cx="296.1" cy="382.6" rx="10.2" ry="10.2"/>
-			</g>
-		</svg>
-	</a> <!-- .logo -->
+	<h1 class="logo">
+		<a href="/">
+			<svg class="logotype" viewBox="0 0 312 283" preserveAspectRatio="xMinYMin meet" xmlns="http://www.w3.org/2000/svg">
+				<style>
+				.path {
+					fill: none;
+					stroke: #F54768;
+					stroke-width: 14;
+					stroke-linecap: round;
+					stroke-linejoin: round;
+					stroke-miterlimit: 10;
+				}
+				.wheel {
+					fill: #F54768;
+				}
+				</style>
+				<g id="skateboard" transform="matrix(1, 0, 0, 1, -150, -160)">
+					<path id="bracket_right" class="bracket path" d="M370.7 371.4l72-72-72-72"/>
+					<path id="bracket_left" class="bracket path" d="M238.7 227.4l-72 72 72 72"/>
+					<g id="complete">
+						<path id="deck" class="path" d="M338.8 175.7l-.6 45.1-70.7 170-31.6 32.2"/>
+						<ellipse id="wheel_1" class="wheel" transform="rotate(-67.418 349.297 254.612)" cx="349.3" cy="254.6" rx="10.2" ry="10.2"/>
+						<ellipse id="wheel_2" class="wheel" transform="rotate(-67.418 296.09 382.571)" cx="296.1" cy="382.6" rx="10.2" ry="10.2"/>
+					</g>
+				</g>
+			</svg>
+		</a>
+	</h1> <!-- .logo -->
+
+	<div class="social">
+		<ul>
+			<li>
+				<a class="social-link social-link--codepen" href="https://codepen.io/bloqhead/">
+					<i class="fa fa-codepen" aria-hidden="true"></i> <span>Codepen</span>
+				</a>
+			</li>
+			<li>
+				<a class="social-link social-link--github" href="https://github.com/bloqhead/">
+					<i class="fa fa-github" aria-hidden="true"></i> <span>Github</span>
+				</a>
+			</li>
+			<li>
+				<a class="social-link social-link--twitter" href="https://twitter.com/bloqhead">
+					<i class="fa fa-twitter" aria-hidden="true"></i> <span>Twitter</span>
+				</a>
+			</li>
+			<li>
+				<a class="social-link social-link--contact" href="/contact/">
+					<i class="fa fa-comment" aria-hidden="true"></i> <span>Contact</span>
+				</a>
+			</li>
+		</ul>
+	</div> <!-- .social -->
 
 	<nav class="nav nav--main">
 		<ul>
@@ -33,14 +62,5 @@
 			<!-- <li><a href="/contact">Contact</a></li> -->
 		</ul>
 	</nav> <!-- .nav -->
-
-	<div class="social">
-		<ul>
-			<li><a href="#"><i class="fa fa-codepen" aria-hidden="true"></i> <span>Codepen</span></a></li>
-			<li><a href=""><i class="fa fa-github" aria-hidden="true"></i> <span>Github</span></a></li>
-			<li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i> <span>Twitter</span></a></li>
-			<li><a href=""><i class="fa fa-" aria-hidden="true"></i> <span>Contact</span></a></li>
-		</ul>
-	</div> <!-- .social -->
 
 </div> <!-- .sidebar -->
