--- a/views/partials/sidebar.html
+++ b/views/partials/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
 
 	<h1 class="logo">
-		<a href="/">
+		<a href="/" class="logo-link">
 			<svg class="logotype" viewBox="0 0 312 283" preserveAspectRatio="xMinYMin meet" xmlns="http://www.w3.org/2000/svg">
 				<style>
 				.path {
@@ -56,11 +56,18 @@
 
 	<nav class="nav nav--main">
 		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="/work">Work</a></li>
-			<li><a href="https://medium.com/@bloqhead">Blog</a></li>
+			<li><a class="nav-item" href="/">Home</a></li>
+			<li><a class="nav-item" href="/work">Work</a></li>
+			<li><a class="nav-item" href="https://medium.com/@bloqhead">Blog</a></li>
 			<!-- <li><a href="/contact">Contact</a></li> -->
 		</ul>
-	</nav> <!-- .nav -->
+	</nav> <!-- .nav--main -->
+
+	<nav class="nav nav--utility">
+		<ul>
+			<li><a class="nav-item" href="/config">Config</a></li>
+			<li><a class="nav-item" href="/terms">Terms</a></li>
+		</ul>
+	</nav> <!-- .nav--utility -->
 
 </div> <!-- .sidebar -->
