--- a/src/scss/_patterns/_navigation.scss
+++ b/src/scss/_patterns/_navigation.scss
@@ -2,26 +2,12 @@
 // Navigation
 //
 
-.nav {
+nav, .nav {
+	padding: 0;
+	margin: 0;
 
 	ul {
 		@include list-reset;
-	}
-}
-
-@mixin nther( $n: null, $color: null, $bg: null ) {
-	$darken: 30%;
-	&:nth-of-type(#{$n}) a {
-		color: $color;
-
-		&:after {
-			background: darken($bg, $darken);
-		}
-
-		&:before {
-			background: $bg;
-			box-shadow: 5px 5px 0 0 darken($bg, $darken);
-		}
 	}
 }
 
@@ -72,6 +58,8 @@
 				width: $w;
 				height: 2px;
 				transform-origin: center;
+				transition: all 2s ease-in-out;
+				transition-delay: 0.3s;
 			}
 
 			&:before {
@@ -82,7 +70,7 @@
 				content: " ";
 				width: 100%;
 				height: 100%;
-				border-radius: 5px;
+				border-radius: $radius;
 				transition: all 0.2s ease-in-out;
 				transform: scaleX(0) skewX(-15deg);
 				transform-origin: center;
@@ -93,8 +81,41 @@
 				&:before {
 					transform: scaleX(1) skewX(-15deg);
 				}
+
+				&:after {
+					transform: scaleX(3);
+				}
 			}
 
+		}
+	}
+}
+
+.nav--utility {
+	position: absolute;
+	bottom: 3em;
+	width: calc( 100% - 2.5em );
+	text-align: center;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	font-size: 1.2rem;
+	font-weight: 600;
+
+	ul {
+		display: block;
+	}
+
+	li {
+		display: inline;
+	}
+
+	a {
+		display: inline-block;
+		color: $shade;
+		margin: 0 0.35em;
+
+		&:hover, &:focus, &:active {
+			color: $yellow;
 		}
 	}
 }
