--- a/src/scss/_patterns/_structure.scss
+++ b/src/scss/_patterns/_structure.scss
@@ -2,9 +2,45 @@
 // Structure
 //
 
+main {
+	position: relative;
+	padding: 0;
+	margin: 0;
+
+	body:not(.home) & {
+
+		&:after {
+			position: fixed;
+			z-index: -1;
+			right: 2em; top: 50%;
+			content: attr(data-title);
+			display: block;
+			overflow: visible;
+			width: 0; height: 0;
+			color: $shade;
+			font-family: $overpass-mono;
+			font-size: 1.2rem;
+			font-weight: 600;
+			text-transform: uppercase;
+			line-height: 0;
+			letter-spacing: 0.5em;
+			white-space: nowrap;
+			vertical-align: middle;
+			padding: 0;
+			margin: 0;
+			transform: rotate(-90deg);
+			transform-origin: center;
+		}
+	}
+}
+
 // Content
 .content {
+	padding: 2em;
 
+	body.home & {
+		padding-top: 0;
+	}
 }
 
 // Sidebar
@@ -13,6 +49,10 @@
 	height: 100vh;
 	background: rgba($mid, 0.85);
 	padding: $sidebar-padding;
+
+	a:after {
+		display: none;
+	}
 }
 
 // Logo
@@ -35,9 +75,14 @@
 	margin: 0 auto;
 	overflow: visible !important;
 
+	// page-specific logo coloring
+	@include logoColor("work", $lime);
+	@include logoColor("contact", $yellow);
+
+	// logo animation
 	body.home & {
 		// on-the-fly timining and delay vars
-		$n: 0.35s; // delay
+		$n: 0.32s; // delay
 		$m: 1.3; // modifier
 
 		#complete, .bracket {
@@ -48,18 +93,18 @@
 		#complete {
 			transform: translateY(1em) rotate(-20deg) scale(2);
 			animation: skateDeck $n forwards ease 1;
-			animation-delay: $n * ( $m + 1 );
+			animation-delay: $n * $m;
 		}
 
 		#bracket_right {
 			transform: translateX(0.5em) scale(0.85);
 			animation: bracketRight $n forwards ease 1;
+			animation-delay: $n * ( $m + 1 );
 		}
 
 		#bracket_left {
 			transform: translateX(-0.5em) scale(0.85);
 			animation: bracketLeft $n forwards ease 1;
-			animation-delay: $n * $m;
 		}
 	}
 }
@@ -70,6 +115,7 @@ footer {
 	text-align: center;
 	text-transform: uppercase;
 	letter-spacing: 0.1em;
+	padding: 2em;
 
 	p {
 		margin: 0;
@@ -83,7 +129,7 @@ footer {
 		padding: 4em 8em;
 	}
 
-	.content-inner, .footer-inner {
+	.content-inner {
 		margin-left: $sidebar-width;
 	}
 
