--- a/src/scss/_patterns/_typography.scss
+++ b/src/scss/_patterns/_typography.scss
@@ -2,21 +2,51 @@
 // Typography
 //
 
-// Links
+// Links - base
 a {
-	color: $lime;
-	transition: all 0.2s ease-in-out;
+	$base: $lime;
+	$active: $yellow;
+	$opacity: 0.25;
+
+	position: relative;
+	display: inline-block;
+	color: $base;
+	text-decoration: none;
+
+	&, &:after {
+		transition: all 0.2s ease;
+	}
 
 	&:hover, &:active {
-		color: $yellow;
+		color: $active;
+	}
+}
+
+// Links - targeted
+a:not(.nav-item):not(.social-link):not(.logo-link):not(.work-grid__item-link):not(.badges__item-link) {
+	$base: $lime;
+	$active: $yellow;
+	$opacity: 0.25;
+	line-height: 1;
+
+	&:hover, &:active {
+
+		&:after {
+			background: rgba($active, $opacity * 1.5);
+			transform: scaleX(1);
+		}
 	}
 
-	&:focus {
-
-	}
-
-	&:visited {
-
+	&:after {
+		position: relative;
+		z-index: -1;
+		display: block;
+		content: "";
+		background: rgba($base, $opacity);
+		width: 100%;
+		height: 3px;
+		transform: scaleX(0.85);
+		transform-origin: center;
 	}
 }
 
@@ -85,9 +115,44 @@ h6, .h6 {
 
 // Special styles
 .brush {
-	display: block;
-	font-family: "Road Rage", $overpass-mono;
-	text-align: center;
-	transform: rotate(-5deg);
-	animation: prettyColors 12s forwards ease-in-out infinite;
+	font-family: $road-rage;
+}
+
+.title {
+	$b1: $lime;
+	$b2: $teal;
+	$w: 10px;
+	$t: 0.6s;
+
+	position: relative;
+	overflow: visible;
+
+	&:before, &:after {
+		position: absolute;
+		left: 0; bottom: 0;
+		display: block;
+		content: "";
+		border-left-style: solid;
+		border-right-style: solid;
+		border-bottom-style: solid;
+		border-left-width: $w;
+		border-right-width: $w;
+		border-bottom-width: $w;
+		border-left-color: transparent;
+		border-right-color: transparent;
+		transform-origin: center;
+		opacity: 0;
+	}
+
+	&:before {
+		border-bottom-color: $b1;
+		animation: titleBefore $t forwards ease-in-out 1;
+		animation-delay: $t;
+	}
+
+	&:after {
+		border-bottom-color: $b2;
+		animation: titleAfter $t forwards ease-in-out 1;
+		animation-delay: 0.1s;
+	}
 }
