--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,5 +34,11 @@
 @import '_patterns/structure';
 @import '_patterns/navigation';
 @import '_patterns/typography';
+@import '_patterns/images';
+@import '_patterns/forms';
 @import '_patterns/work-grid';
+@import '_patterns/masthead';
+@import '_patterns/badges';
 @import '_patterns/social';
+@import '_patterns/switch';
+@import '_patterns/intro';
