--- a/views/contact.html
+++ b/views/contact.html
@@ -1,31 +1,46 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container">
-  <h3>Contact Form</h3>
-  {% if messages.success %}
-  <div class="text-success">
-    {% for success in messages.success %}
-    <div>{{ success.msg }}</div>
-    {% endfor %}
-  </div>
-  {% endif %}
-  {% if messages.error %}
-  <div class="text-danger">
-    {% for error in messages.error %}
-    <div>{{ error.msg }}</div>
-    {% endfor %}
-  </div>
-  {% endif %}
-  <form method="POST">
-    <label for="name">Name</label>
-    <input type="text" name="name" id="name" autofocus>
-    <label for="email">Email</label>
-    <input type="email" name="email" id="email">
-    <label for="message">Body</label>
-    <textarea name="message" id="message" rows="7"></textarea>
-    <br>
-    <button type="submit">Send</button>
-  </form>
-</div>
+
+	<div class="card">
+		<h1 class="title">Drop me a line</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dolorem tempora, nostrum. Doloremque voluptatem eligendi nulla nemo reiciendis. Non inventore excepturi ducimus quo libero consectetur vitae nisi natus, sed alias.</p>
+	</div>
+
+	{% if messages.success %}
+	<div class="text-success">
+		{% for success in messages.success %}
+		<div>{{ success.msg }}</div>
+		{% endfor %}
+	</div>
+	{% endif %}
+
+	{% if messages.error %}
+	<div class="text-danger">
+		{% for error in messages.error %}
+		<div>{{ error.msg }}</div>
+		{% endfor %}
+	</div>
+	{% endif %}
+
+	<form method="POST" class="form form--contact">
+		<div class="row">
+			<div class="col-sm-12 col-md-6">
+				<input type="text" name="name" id="name" autofocus>
+				<label for="name">What's your name?</label>
+			</div>
+			<div class="col-sm-12 col-md-6">
+				<input type="email" name="email" id="email">
+				<label for="email">What's your email?</label>
+			</div>
+		</div>
+		<div class="input-wrap">
+			<textarea name="message" id="message" rows="7"></textarea>
+			<label for="message">Leave a comment</label>
+		</div>
+		<div class="input-wrap input-wrap--button">
+			<button type="submit">Send</button>
+		</div>
+	</form>
+
 {% endblock %}
