--- a/views/work.html
+++ b/views/work.html
@@ -2,10 +2,8 @@
 
 {% block body %}
 
-	<div class="content">
-		<div class="content-inner">
+	<h1 class="title">Work</h1>
 
-		</div> <!-- .content-inner -->
-	</div>  <!-- .content -->
+	{% include "partials/work-grid.html" %}
 
 {% endblock %}
