--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,7 @@
 <header class="masthead">
 	<div class="masthead__inner row">
 		<div class="col-sm-5">
-			<div class="clipped">
+			<div class="clipped masthead__profile">
 				<div class="clipped__content clipped__area">
 					<img src="/img/me.jpg" alt="Daryn's Face">
 				</div>
