--- a/views/terms.html
+++ b/views/terms.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-	<h1 class="title">Terms</h1>
+	<h1 class="title">{{title}}</h1>
 
 	<h2>bloq.io Terms of Service and Privacy Policy</h2>
 
