--- a/public/css/main.css
+++ b/public/css/main.css
@@ -110,7 +110,8 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -1832,12 +1833,6 @@ body.home .content {
   padding-top: 0;
 }
 
-.sidebar {
-  position: relative;
-  height: 100vh;
-  background: rgba(34, 34, 34, 0.85);
-  padding: 1.25em;
-}
 .sidebar a:after {
   display: none;
 }
@@ -1912,6 +1907,24 @@ footer p {
   padding: 0;
 }
 
+@media (max-width: 800px) {
+  .mobile-brand-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    background: rgba(34, 34, 34, 0.85);
+    padding: 1.25em;
+  }
+}
 @media (min-width: 800px) {
   .content, footer {
     width: calc( 100% - $sidebar-width );
@@ -1927,6 +1940,9 @@ footer p {
     left: 0;
     top: 0;
     width: 14em;
+    height: 100vh;
+    background: rgba(34, 34, 34, 0.85);
+    padding: 1.25em;
   }
 }
 nav, .nav {
@@ -1943,7 +1959,7 @@ nav ul, .nav ul {
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 0.1em;
-  font-size: 4em;
+  font-size: 3em;
   font-family: "Overpass Mono", monospace;
 }
 .nav--main li {
@@ -1955,6 +1971,60 @@ nav ul, .nav ul {
   padding: 0.35em;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+}
+
+.nav--utility {
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-size: 12px;
+  font-size: 12px;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+.nav--utility ul {
+  display: block;
+}
+.nav--utility li {
+  display: inline;
+}
+.nav--utility a {
+  display: inline-block;
+  color: #555;
+  margin: 0 0.35em;
+}
+.nav--utility a:hover, .nav--utility a:focus, .nav--utility a:active {
+  color: #eef46e;
+}
+
+@media (max-width: 800px) {
+  .mobile-nav-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  .mobile-nav-container.is-active {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .burger {
+    width: 30px;
+  }
+  .burger svg .bar {
+    fill: #f54768;
+  }
+  .burger.is-active svg .bar {
+    fill: #8bd76b;
+  }
 }
 @media (min-width: 800px) {
   .nav--main {
@@ -2053,35 +2123,13 @@ nav ul, .nav ul {
     -webkit-transform: scaleX(3);
             transform: scaleX(3);
   }
-}
 
-.nav--utility {
-  position: absolute;
-  bottom: 3em;
-  width: calc( 100% - 2.5em );
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  font-size: 12px;
-  font-size: 12px;
-  font-size: 1.2rem;
-  font-weight: 600;
+  .nav--utility {
+    position: absolute;
+    bottom: 3em;
+    width: calc( 100% - 2.5em );
+  }
 }
-.nav--utility ul {
-  display: block;
-}
-.nav--utility li {
-  display: inline;
-}
-.nav--utility a {
-  display: inline-block;
-  color: #555;
-  margin: 0 0.35em;
-}
-.nav--utility a:hover, .nav--utility a:focus, .nav--utility a:active {
-  color: #eef46e;
-}
-
 a {
   position: relative;
   display: inline-block;
@@ -2096,15 +2144,15 @@ a:hover, a:active {
   color: #eef46e;
 }
 
-a:not(.nav-item):not(.social-link):not(.logo-link):not(.work-grid__item-link):not(.badges__item-link) {
+a:not(.nav-item):not(.social-link):not(.logo-link):not(.work-grid__item-link):not(.badges__item-link):not(.burger) {
   line-height: 1;
 }
-a:not(.nav-item):not(.social-link):not(.logo-link):not(.work-grid__item-link):not(.badges__item-link):hover:after, a:not(.nav-item):not(.social-link):not(.logo-link):not(.work-grid__item-link):not(.badges__item-link):active:after {
+a:not(.nav-item):not(.social-link):not(.logo-link):not(.work-grid__item-link):not(.badges__item-link):not(.burger):hover:after, a:not(.nav-item):not(.social-link):not(.logo-link):not(.work-grid__item-link):not(.badges__item-link):not(.burger):active:after {
   background: rgba(238, 244, 110, 0.375);
   -webkit-transform: scaleX(1);
           transform: scaleX(1);
 }
-a:not(.nav-item):not(.social-link):not(.logo-link):not(.work-grid__item-link):not(.badges__item-link):after {
+a:not(.nav-item):not(.social-link):not(.logo-link):not(.work-grid__item-link):not(.badges__item-link):not(.burger):after {
   position: relative;
   z-index: -1;
   display: block;
@@ -2822,8 +2870,8 @@ button:hover:after, button:focus:after, button:active:after, .btn:hover:after, .
   font-size: 18px;
   font-size: 1.8rem;
   margin: 0 0 1.5em 0;
-  -webkit-transform: skewY(-3deg) translateY(-5em);
-          transform: skewY(-3deg) translateY(-5em);
+  -webkit-transform: skewY(-3deg) translateY(-1.81818em);
+          transform: skewY(-3deg) translateY(-1.81818em);
 }
 .masthead:before {
   position: absolute;
@@ -2850,8 +2898,7 @@ button:hover:after, button:focus:after, button:active:after, .btn:hover:after, .
   font-family: "Road Rage", "Overpass Mono", monospace;
   color: #eef46e;
   text-shadow: 5px 5px 0 #000;
-  -webkit-transform: translateZ(0) translateY(0.12em) skewY(-3.5deg);
-          transform: translateZ(0) translateY(0.12em) skewY(-3.5deg);
+  text-align: center;
   margin: 0;
   padding: 0;
 }
@@ -2875,14 +2922,14 @@ button:hover:after, button:focus:after, button:active:after, .btn:hover:after, .
 .masthead__inner {
   position: relative;
   z-index: 1;
-  padding: 10em 1em 1em 1em;
+  padding: 2em;
   -webkit-transform: skewY(3deg);
           transform: skewY(3deg);
 }
 
 @media (min-width: 1200px) {
   .masthead__inner {
-    max-width: 38em;
+    max-width: 42em;
   }
 
   .masthead__blurb {
@@ -2890,13 +2937,27 @@ button:hover:after, button:focus:after, button:active:after, .btn:hover:after, .
             transform: translateX(-2em);
   }
 }
+@media (max-width: 800px) {
+  .masthead__profile {
+    display: none;
+  }
+}
 @media (min-width: 800px) {
   .masthead {
     font-size: 2.1rem;
+    -webkit-transform: skewY(-3deg) translateY(-5em);
+            transform: skewY(-3deg) translateY(-5em);
   }
 
   .masthead__inner {
+    padding: 10em 1em 1em 1em;
     margin-left: 14em;
+  }
+
+  .masthead__title {
+    text-align: left;
+    -webkit-transform: translateZ(0) translateY(0.12em) skewY(-3.5deg);
+            transform: translateZ(0) translateY(0.12em) skewY(-3.5deg);
   }
 }
 .badges {
