--- a/src/scss/_patterns/_structure.scss
+++ b/src/scss/_patterns/_structure.scss
@@ -45,10 +45,6 @@ main {
 
 // Sidebar
 .sidebar {
-	position: relative;
-	height: 100vh;
-	background: rgba($mid, 0.85);
-	padding: $sidebar-padding;
 
 	a:after {
 		display: none;
@@ -123,6 +119,20 @@ footer {
 	}
 }
 
+@media #{$bp-medium-max} {
+	.mobile-brand-container {
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 10;
+		display: flex;
+		align-items: center;
+		align-content: center;
+		background: rgba($mid, 0.85);
+		padding: $sidebar-padding;
+	}
+}
+
 @media #{$bp-medium} {
 	.content, footer {
 		width: $content-width;
@@ -138,5 +148,8 @@ footer {
 		left: 0;
 		top: 0;
 		width: $sidebar-width;
+		height: 100vh;
+		background: rgba($mid, 0.85);
+		padding: $sidebar-padding;
 	}
 }
