--- a/views/layout.html
+++ b/views/layout.html
@@ -3,9 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="HandheldFriendly" content="True">
-		<meta name="MobileOptimized" content="320">
+		<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 		<title>{% if title %}{{title}} | {% endif %}Daryn St. Pierre | Front-End Web Developer</title>
 		<script src="https://use.fontawesome.com/a4bc0a3d5c.js"></script>
 		<link rel="stylesheet" href="/css/main.css">
@@ -26,18 +24,7 @@
 
 		</main>
 
-		<script src="/js/vendor.js"></script>
-		<script src="/js/app.js"></script>
-
-		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-		<script>
-			(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-				function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-				e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-				e.src='https://www.google-analytics.com/analytics.js';
-				r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-			ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-		</script>
+		{% include "partials/footer-scripts.html" %}
 
 	</body>
 </html>
